Fixed centering and spacing

--- a/src/components/ReviewCard/style.css
+++ b/src/components/ReviewCard/style.css
@@ -17,3 +17,7 @@
     margin: auto;
     margin-top:4%;
 }
+
+.avgrating {
+    margin-bottom: 15px;
+}
