--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -31,7 +31,6 @@ h3, h2 {
       margin: 0 auto;
       padding-top: 10%;
       padding-bottom: 15%;
-      /* text-align: center; */
 }
 
 
@@ -106,4 +105,8 @@ svg {
 
 .loader {
     text-align: center;
+}
+
+.widget-svg {
+    margin-top: -10px !important;
 }
